feat: Documentation of endpoint products.
